--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
     "expo-permissions": "~8.0.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.0",
+    "firebase": "^5.5.8",
+    "firebase-tools": "^7.14.0",
+    "g": "^2.0.1",
     "mongoose": "^5.9.2",
+    "nodejs-mobile-react-native": "^0.5.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-easy-grid": "^0.2.2",
+    "react-native-error-boundary": "^1.1.0",
+    "react-native-fetch-blob": "^0.10.8",
+    "react-native-fs": "^2.16.6",
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.2.2",
     "react-webcam": "^5.0.0"
